--- a/index.html
+++ b/index.html
@@ -24,6 +24,27 @@
     </nav>
 
     <main class="container my-4">
+
+        <div class="row g-3 mb-4">
+            <div class="col-12 col-sm-6 col-lg-4">
+                <div class="card p-3">
+                    <div class="fw-bold fs-3" id="total-exchanges">—</div>
+                    <small class="text-secondary text-uppercase">Total de Casas de Cambio</small>
+                </div>
+            </div>
+            <div class="col-12 col-sm-6 col-lg-4">
+                <div class="card p-3">
+                    <div class="fw-bold fs-3" id="avg-price">—</div>
+                    <small class="text-secondary text-uppercase">Precio Promedio (Top 100)</small>
+                </div>
+            </div>
+            <div class="col-12 col-lg-4">
+                <div class="card p-3">
+                    <div class="fw-bold fs-3" id="top-coin">—</div>
+                    <small class="text-secondary text-uppercase">Moneda más Cara (Top 100)</small>
+                </div>
+            </div>
+        </div>
         <!-- Charts -->
         <div class="row g-3 mt-1">
             <div class="col-12 col-lg-6">
